# bdengine

./: CMakeLists.txt  vcpkg.json
example/: CMakeLists.txt
example/src/: main.cpp
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
src/bde/: bde.cpp  bde.hpp  colors.hpp  hal.cpp  hal.hpp  math.cpp  math.hpp  render.cpp  render.hpp  utils.cpp  utils.hpp
src/bde/render/: interfaces.hpp  mesh.cpp  mesh.hpp
